--- a/ModelessDialog/src/dialog1.html
+++ b/ModelessDialog/src/dialog1.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <script src="js/sample.js" type="text/javascript"></script>
+    <script src="js/example1.js" type="text/javascript"></script>
 </head>
 <body>
 果物を選んで下さい
