fixes #29 HTML5では簡単にファイルを読み込めた。

--- a/FileAPI_read_text_file/src/main.html
+++ b/FileAPI_read_text_file/src/main.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>File 読み込みテスト</title>
+    <title>ファイル読み込みテスト</title>
 </head>
 <body>
 <label for="files">画像ファイル: </label>
