refs #35 appCountDownで静的に3つのカウントダウンタイマーを表示できた

--- a/appCountDown/src/main.html
+++ b/appCountDown/src/main.html
@@ -2,12 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>example of count down</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
 </head>
 <body>
-<div id="defaultCountdown">Initial comment</div>
+<div class="all">
+    <div class="counter" id="upper">赤</div>
+    <div class="counter" id="middle">青</div>
+    <div class="counter" id="lower">緑</div>
+</div>
 
-<script type="application/javascript" src="js/jquery-1.8.3.js"></script>
+<script type="application/javascript" src="js/TimeCounter.js"></script>
+<script type="application/javascript" src="js/Program.js"></script>
 <script type="application/javascript" src="js/main.js"></script>
 </body>
 </html>
