fixes #35 HTMLとデータソースを分離することが出きることを確認した。

--- a/appCountDown/src/main.html
+++ b/appCountDown/src/main.html
@@ -11,9 +11,12 @@
     <div class="counter" id="upper">赤</div>
     <div class="counter" id="middle">青</div>
     <div class="counter" id="lower">緑</div>
+    <div class="counter" id="sub1">黄</div>
 </div>
 
+<!--
 <script type="application/javascript" src="js/TimeCounter.js"></script>
+-->
 <script type="application/javascript" src="js/Program.js"></script>
 <script type="application/javascript" src="js/main.js"></script>
 </body>
