local jquery-1.8.3.js

--- a/tryto_JQuery_Widget/src/main.html
+++ b/tryto_JQuery_Widget/src/main.html
@@ -10,7 +10,7 @@
 <div id="myWidget2"></div>
 <div id="myWidget3"></div>
 <div id="dummy"></div>
-<script type="application/javascript" src="vendor/jquery-1.8.3.js"></script>
+<script src="//code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
 <script type="application/javascript" src="vendor/jquery-ui-1.11.4.js"></script>
 <script type="application/javascript" src="js/myWidget.js"></script>
 <script type="application/javascript" src="js/main.js"></script>
