--- a/appCountDown/src/main.html
+++ b/appCountDown/src/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>example of count down</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
+    <script src="//code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
 </head>
 <body>
 <div class="all">
