--- a/tryto_CallbackWithArguments/src/main.html
+++ b/tryto_CallbackWithArguments/src/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
+    <script src="//code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
 </head>
 <body>
 <script type="application/javascript" src="js/main.js"></script>
