--- a/tryto_FileAPI_read_text_file/src/main.html
+++ b/tryto_FileAPI_read_text_file/src/main.html
@@ -13,7 +13,7 @@
 <label for="files">テキストファイル: </label>
 <input type="file" id="getfile" accept="text/*">
 
-<script src="js/jquery-1.8.3.js"></script>
+<script src="//code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
