--- a/tryto_JQuery_tmpl/src/main.html
+++ b/tryto_JQuery_tmpl/src/main.html
@@ -21,8 +21,8 @@
 
 </script>
 
-<script type="application/javascript" src="vendor/jquery-1.8.3.js"></script>
-<script type="application/javascript" src="//ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.js"></script>
+<script src="//code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
+<script src="//ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.js" type="application/javascript"></script>
 <script type="text/javascript">
     $('#tmpl_info').tmpl({name: 'bsheep', place: 'tokyo'}).appendTo('#main');
 </script>
