--- a/tryto_ModelessDialog/src/dialog2.html
+++ b/tryto_ModelessDialog/src/dialog2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <script src="js/jquery-1.8.3.js"></script>
+    <script src="//code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
 </head>
 <body>
 <button type="button" id="select1">親ウィンドウに入力する</button>
