--- a/tryto_ModelessDialog/src/example2.html
+++ b/tryto_ModelessDialog/src/example2.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <script src="js/jquery-1.8.3.js"></script>
+    <script src="//code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
 </head>
 <body>
 <form action="" name="form01">
